--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "@types/animejs": "^3.1.0",
-    "animejs": "^3.2.0"
+    "@types/lodash": "^4.14.150",
+    "animejs": "^3.2.0",
+    "lodash": "^4.17.15"
   }
 }
